--- a/style.css
+++ b/style.css
@@ -1,77 +1,150 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+*{
+    box-sizing: border-box;
+}
 body{
-    padding: 0;
+    font-family: 'Roboto',sans-serif;
     margin: 0;
     display: flex;
+    
     flex-direction: column;
 }
 
 header{
-    flex:1;
-    display :flex;
+    display: flex;
     flex-direction: column;
-    background-color: #1F2937;
+    background-color: #1f2937;
+    padding: 0 75px 75px;
 }
-
-.header-logo-links {
-    display:flex;
+.header-logo-links{
+    display: flex;
+    margin-bottom: 50px;
     
 }
-
-.logo {
-    width: 100px;
+.logo{
+    width: 50px;
+    height: 50px;
 }
-
-.header-links {
-    margin-left: auto;
-}
-ul{
+.header-links{
     display: flex;
+    margin-left: auto;
+    gap: 26px;
 }
-li {
+li{
     list-style-type: none;
 }
-
-a {
-    text-decoration: none;
+a,
+.header-text p {
+    font-size: 18px;
+    color: #E5E7EB ;
+} 
+a{
+    font-size: 18px;
 }
-
-
-.header-text-image {
+.header-text-image{
     display: flex;
+    height: auto;
+    justify-content: space-between;
+}
+h1{
+    margin-top: 0;
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 800;
+}  
+.header-text button {
+    color : #F9FAF8;
+    background-color: #3882f6;
+    border : 0;
+    padding: 5px 12px;
+    border-radius: 5px;
 }
 .header-image {
-    width: 400px;
-    height: 300px;
+    width: auto;
+    height: 350px;
 }
 
 
-.section-one{
-    flex:1;
+
+.section-one {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    
+    padding: 0 75px 75px;
 }
-.boxes {
-    display: flex;;
+.boxes{
+    display: flex;
+    gap : 16px;
 }
-.box img {
-    width: 150px;
-    height: 150px;
-    border : 1px solid #3882f6;
+
+.box {  
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+}
+.box .image {
+    flex: 1;
+    max-height: 200px;
+    border : 1px solid blue;
+    border-radius: 5px;
+}
+.box .image img {
+    width: 100%; /* Ensure the image does not exceed the container's width */
+    height: 100%; /* Maintain the image's aspect ratio */
+  }
+
+.box p {
+    padding: 10px 5px;
+    margin : 0px
 }
 
 
-.section-two{
+
+blockquote{
+    margin: 0;
+    padding: 75px 75px ;
     background-color: #E5E7EB;
-    flex:1;
+
+}
+.quote-owner{
+    text-align: end;
+    font-weight: bold;
 }
 
-.section-three{
-    flex:1;
+
+.section-three {
+    margin: 75px;
+    padding: 20px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 15px;
 }
+.section-three button {
+    border : 1px solid ;
+    background-color: #3882f6;
+    color: white;
+    padding: 5px 12px;
+    border-radius: 5px;  
+    flex-shrink: 0; 
+}
+.call-to-action p{
+    color: #E5E7EB ;
+    border-radius: 5px;
+}
+.call-to-action .head {
+    color: white ;
+    font-weight: bold;
+}
+
 
 footer {
-    flex:1;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+    color: white;
 }
+
